force-app/main/default/objects/Card__c/fields/Card_Holder_Email__c.field-meta.xml
<CustomField>
    <fullName>Card_Holder_Email__c</fullName>
    <label>Card Holder Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>