force-app/main/default/objects/Card__c/fields/Card_Last_Four__c.field-meta.xml
<CustomField>
    <fullName>Card_Last_Four__c</fullName>
    <label>Card Last Four</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>