force-app/main/default/objects/Card__c/fields/Card_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Card_Manager_Email__c</fullName>
    <label>Card Manager Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>