force-app/main/default/objects/Card__c/fields/Card_Manager_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Card_Manager_Last_Name__c</fullName>
    <label>Card Manager Last Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>