force-app/main/default/objects/Card__c/fields/External_Username__c.field-meta.xml
<CustomField>
    <fullName>External_Username__c</fullName>
    <externalId>true</externalId>
    <label>External Username</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>